tests/errors/phpdoc_scalar.php
<?php

declare(strict_types=1);

/**
 * @param integer $a
 */
function hello($a): void
{
}
